# Remember

./: .gitignore  .tmp-p3t1-rust-proof.txt  .tmp-run-p2t5-gates.ps1  .tmp-run-p3t1-gates.ps1  .tmp-run-p3t4-gates.ps1  AGENTS.md  Cargo.toml  DEV.md  FIX.md  FRONTEND_INTEGRATION.md  PLAN.md  PLAN1.md  README.md  RELEASE.md  ROADMAP.md  package-lock.json  package.json  product.md  task.jsonl
.playwright-cli/: page-2026-03-15T08-27-15-222Z.yml
crates/remember-ipc-server/: Cargo.toml
crates/remember-ipc-server/src/: lib.rs  main.rs
crates/remember-ipc-server/tests/: rpc_contract.rs
qa-gates-codex/: DRY-RUN-REPORT.md  EXECUTION-CHECKLIST.md  MASTER-TRACE-MATRIX.md  P2-T3-IG-FAIL_20260316_ENV-SQLITE_codex.txt  P2-T3-IG-PASS_20260316_ENV-SQLITE_codex.txt  P2-T3-VG-FAIL_20260316_ENV-SQLITE_codex.txt  P2-T3-VG-PASS_20260316_ENV-SQLITE_codex.txt  P2-T5-IG-FAIL_20260317_ENV-PG_codex.txt  P2-T5-IG-FAIL_20260317_ENV-SQLITE_codex.txt  P2-T5-IG-PASS_20260317_ENV-PG_codex.txt  P2-T5-IG-PASS_20260317_ENV-SQLITE_codex.txt  P2-T5-VG-FAIL_20260317_ENV-PG_codex.txt  P2-T5-VG-FAIL_20260317_ENV-SQLITE_codex.txt  P2-T5-VG-PASS_20260317_ENV-PG_codex.txt  P2-T5-VG-PASS_20260317_ENV-SQLITE_codex.txt  P3-T1-IG-FAIL_20260317_ENV-DUAL_codex.txt  P3-T1-IG-PASS_20260317_ENV-DUAL_codex.txt  P3-T1-VG-FAIL_20260317_ENV-DUAL_codex.txt  P3-T1-VG-PASS_20260317_ENV-DUAL_codex.txt  P3-T4-IG-FAIL_20260317_ENV-DUAL_codex.txt  P3-T4-IG-PASS_20260317_ENV-DUAL_codex.txt  P3-T4-VG-FAIL_20260317_ENV-DUAL_codex.txt  P3-T4-VG-PASS_20260317_ENV-DUAL_codex.txt  P3-T5-IG-FAIL_20260317_ENV-DUAL_codex.txt  (+60 more)
(+130 files in other folders)
